# claude-qq-bot

./: .env.example  .gitignore  AGENT_MODE.md  DEPLOY.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  bot.py  pyproject.toml  run.bat  start.bat  start.sh  test_memory.py  test_quick.py
codex-skills/claude-qq-bot-maintainer/: SKILL.md
codex-skills/claude-qq-bot-maintainer/agents/: openai.yaml
codex-skills/claude-qq-bot-maintainer/references/: project-state.md
config/: persona.json  style_distill.json
docs/: command-guide.md  development-log.md
src/plugins/claude/: __init__.py  agent.py  api.py  auto_memory.py  config.py  confirmation.py  controlled_agent.py  dialogue.py  formatter.py  memory.py  memory_core.py  permissions.py  persona.py  runtime_state.py  safe_tools.py  style_distill.py  style_profile.py  style_skill.py  style_teaching.py
src/plugins/claude/commands/: __init__.py  agent.py  legacy.py  memory.py  permissions.py  style.py  system.py  teaching.py
src/plugins/claude/legacy/: __init__.py  agent.py
src/plugins/claude/style/: __init__.py
src/plugins/claude/style/distill/: __init__.py  embedding.py  generation.py  phrases.py  qce_io.py  reports.py  retrieval.py  settings.py  taxonomy.py  turns.py
