[project]
name = "claude-qq-bot"
version = "0.1.0"
description = "QQ 机器人 - 基于 nonebot2 + OneBot + 中科大 LLM API"
requires-python = ">=3.10"
dependencies = [
    "nonebot2>=2.2.0",
    "nonebot-adapter-onebot>=2.4.0",
    "nonebot-plugin-session>=0.3.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "aiofiles>=23.2.1",
    "aiosqlite>=0.20.0",
    "pillow>=10.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "chromadb>=0.4.0",
]

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["src.plugins.claude"]
plugin_dirs = ["src/plugins"]
